# chat-message-application

./: .editorconfig  .gitignore  LICENSE  build.gradle.kts  fonts.md  gradle.properties  local.properties  settings.gradle.kts
backend/: build.gradle.kts
backend-rust/: Cargo.toml  Dockerfile  fly.toml
backend-rust/src/: domain.rs  error.rs  main.rs  server.rs
backend-rust/src/domain/: mappers.rs  packets.rs  rooms.rs
backend-rust/src/domain/packets/: client_packet.rs  server_packet.rs
backend-rust/src/domain/rooms/: message.rs  packet_client.rs  room.rs  session.rs  storage.rs
backend-rust/src/server/: adapters.rs  dto.rs  error.rs  rest.rs  server.rs  state.rs  ws.rs
backend-rust/src/server/adapters/: axum_ws_packet_client.rs
backend-rust/src/server/dto/: client_packet_dto.rs  room.rs  server_packet_dto.rs
backend-rust/src/server/rest/: rooms_rest_controller.rs
backend-rust/src/server/ws/: messages_ws_controller.rs
backend-rust/src/storage/: memory_storage.rs
backend-rust/src/storage/memory_storage/: rooms_memory_storage.rs
backend/application-ktor/: Dockerfile  build.gradle.kts  docker-compose.yml  fly.toml
backend/application-ktor-java/: Dockerfile  build.gradle.kts  fly.toml
backend/room/: build.gradle.kts
backend/room-ktor/: build.gradle.kts
client-compose/: build.gradle.kts
client-compose/src/androidMain/: AndroidManifest.xml
common/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kotlin-js-store/: package-lock.json
sdk-kotlin/: build.gradle.kts
(+49 files in other folders)
