[package]
name = "chat-message-application-backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89" }
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["ws", "tokio", "tracing", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
thiserror = { version = "1.0.64" }
tower-http = { version = "0.6.1", features = ["trace", "tokio", "cors"] }
tracing = "0.1.40"
serde_json = "1.0.128"
jiff = { version = "0.1.13", features = ["serde"] }
